[gd_scene load_steps=2 format=3 uid="uid://cxqwv3kj5m6ne"]

[ext_resource type="Script" path="res://coop/scripts/ui/character_selection_ui.gd" id="1_char_ui"]

[node name="CharacterSelectionUI" type="CanvasLayer"]
script = ExtResource("1_char_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)

[node name="MainPanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="Control/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Control/MainPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Character Selection"
theme_type_variation = &"HeaderLarge"

[node name="CloseButton" type="Button" parent="Control/MainPanel/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="Control/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="Control/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="ClassSelectionPanel" type="VBoxContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassSelectionPanel"]
layout_mode = 2
text = "Choose Your Class"
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 1

[node name="ClassGrid" type="GridContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassSelectionPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="VSeparator" type="VSeparator" parent="Control/MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="ClassInfoPanel" type="VBoxContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel"]
layout_mode = 2
text = "Class Details"
theme_type_variation = &"HeaderMedium"
horizontal_alignment = 1

[node name="ClassPreview" type="PanelContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ClassIcon" type="TextureRect" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(128, 128)
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="ClassName" type="Label" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview/VBoxContainer"]
layout_mode = 2
text = "Select a Class"
theme_type_variation = &"HeaderSmall"
horizontal_alignment = 1

[node name="ClassDescription" type="Label" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview/VBoxContainer"]
layout_mode = 2
text = "Choose a class from the left to see its details"
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview/VBoxContainer"]
layout_mode = 2
text = "Class Stats:"
theme_type_variation = &"HeaderSmall"

[node name="StatsContainer" type="VBoxContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/ClassPreview/VBoxContainer"]
layout_mode = 2

[node name="WeaponSelection" type="VBoxContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/WeaponSelection"]
layout_mode = 2
text = "Select Weapon:"
theme_type_variation = &"HeaderSmall"

[node name="WeaponOptions" type="HBoxContainer" parent="Control/MainPanel/VBoxContainer/ContentContainer/ClassInfoPanel/WeaponSelection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator2" type="HSeparator" parent="Control/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="BottomButtons" type="HBoxContainer" parent="Control/MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="Control/MainPanel/VBoxContainer/BottomButtons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="Control/MainPanel/VBoxContainer/BottomButtons"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Confirm Selection"
disabled = true

[connection signal="pressed" from="Control/MainPanel/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/VBoxContainer/BottomButtons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Control/MainPanel/VBoxContainer/BottomButtons/ConfirmButton" to="." method="_on_confirm_button_pressed"]